<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general -->
    <string name="app_name">Pogo Painter</string>
    <string name="version">Version</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Okay</string>
    <string name="ops">Opss...</string>
    <string name="bluetooth_miss">Bluetooth unavailable on your device. You cannot use multiplayer option!</string>
    <string name="pref_changed">Preferences changed</string>
    <string name="pref_reset">Preference reset</string>
    <string name="change_saved">Changes saved</string>
    <string name="lang_change">Language changed</string>
    <string name="pogo_rules">Pogo rules</string>
    <string name="play_again">Play again</string>
    <string name="go_to_menu">Go to menu</string>
    
    <!-- main menu -->
    <string name="main_title">Pogo Painter</string>
    <string name="single_player_label">Single player</string>
    <string name="multi_player_label">Multiplayer</string>
    <string name="about_label">About</string>
    <string name="help_label">Help</string>
    <string name="options_label">Options</string>

    <!-- multiplayer -->
    <string name="classic_label">Classic</string>
    <string name="classic_help_title">Classic game rules</string>
    <string name="coop_label">Co-op</string>
    <string name="coop_help_title">Coop game rules</string>
    <string name="deathmatch_label">Deathmatch</string>
    <string name="deathmatch_help_title">Deathmatch game rules</string>
    <string name="multiplayer_create_label">Create game</string>
    <string name="multiplayer_join_label">Join game</string>
    <string name="question_label">What?</string>
    <string name="score_rules_label">Score system</string>
    <string name="multiplayer_title">Multiplayer</string>

    <!-- about -->
    <string name="about_us_title">About us</string>
    <string name="about_title">About Pogo Painter</string>
    <string name="contact_us">Contact us</string>
    <string name="about_game_text">        Pogo Painter is a funny &amp; arcade game. It provides single &amp; multiplayer modes with different types of gameplay.
</string>
    <string name="about_us_text">        We are two students from ELSYS and Pogo Painter is our project. We will continue developing it if there is interest in it!
</string>

    <!-- settings -->
    <string name="pogo_reset">Pogo Reset</string>
    <string name="pogo_reset_question">"Do you want to reset game preferences?"</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Pogo Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="choose_size">Choose size</string>
    <string name="choose_time">Choose round time</string>
    <string name="choose_points">Choose round points</string>
    <string name="classic">Classic</string>
    <string name="coop">Co-op</string>
    <string name="deathmatch">Deathmatch</string>
    <string name="general">General</string>
    <string name="game_sounds">Game sounds</string>
    <string name="game_sounds_sum">Check if you want in-game sounds</string>
    <string name="game_lang">Game languages</string>
    <string name="classic_board_size">Classic board size</string>
    <string name="coop_board_size">Co-op board size</string>
    <string name="deathmatch_board_size">Deathmatch board size</string>
    <string name="controls">Left controls position</string>
    <string name="controls_sum">Uncheck for right controls position</string>

</resources>