<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/repeatable"
    android:baselineAligned="true"
    android:orientation="horizontal"
    android:padding="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:text="@string/main_title"
            android:textSize="24.5sp" />

        <Button
            android:id="@+id/singlePlayer_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_player_label" />

        <Button
            android:id="@+id/multiPlayer_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_player_label" />

        <Button
            android:id="@+id/options_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_label" />

         <Button
             android:id="@+id/about_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:text="@string/about_label" />

            <Button
                android:id="@+id/help_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/about_button"
                android:text="@string/help_label" />
    </LinearLayout>

</LinearLayout>