<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/repeatable"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:text="@string/about_us_title"
            android:textSize="24.5sp" />

        <TextView
            android:id="@+id/TextAboutUs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:text="@string/about_us_text" />
    </LinearLayout>

    <Button
        android:id="@+id/contact_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/contact_us" />

</LinearLayout>